# monorepo

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AI_ENABLEMENT_RUNBOOK.md  API_ENDPOINTS.md  API_REQUIREMENTS.md  ARCHITECTURE.md  BRD_VERIFICATION.md  CONTRIBUTING.md  DELIVERABLES.md  DEV_ENVIRONMENT_STATUS.md  DEV_LAUNCHED.md  DEV_SETUP_INSTRUCTIONS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE_READINESS_REPORT.md  PROJECT_OVERVIEW.md  README.md  SETUP.md  ST_ENVIRONMENT_STATUS.md  VERIFICATION_REPORT.md  render.yaml  start-dev.sh  stop-dev.sh
backend/: Dockerfile  pyproject.toml  pytest.ini  worker_entrypoint.py
backend/agents/: __init__.py  ai_agent.py  brands_agent.py  competitors_agent.py  fulfillment_agent.py  inventory_sync_agent.py  order_processing_agent.py  product_enrichment_agent.py  shopify_onboarding_hook.py  store_scraper_agent.py  task_run.py  template_renderer_agent.py
backend/ai/: __init__.py  admin.py  apps.py  models.py  tasks.py  validators.py
backend/brands/: admin.py  apps.py  blueprint_views.py  models.py  models.py.backup  onboarding_helpers.py  serializers.py  urls.py  views.py  views_blueprint.py  views_onboarding.py  views_profile.py
backend/competitors/: admin.py  apps.py  models.py  parsers.py  serializers.py  tasks.py  urls.py  views.py
backend/config/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/content/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/core/: admin.py  auth.py  auth_urls.py  exceptions.py  job_urls.py  middleware.py  models.py  urls.py  (+7 more)
(+167 files in other folders)
